Рефакторинг и оптимизация кода.